Wire up Lambda to send tweets.

--- a/functions/iot_button/package.json
+++ b/functions/iot_button/package.json
@@ -9,7 +9,8 @@
     "url": "git+https://github.com/bradgignac/solve-iot.git"
   },
   "dependencies": {
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "twitter-node-client": "0.0.6"
   },
   "devDependencies": {}
 }
